--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-RELEASE_REPOSITORY_URL=http://www.cywl.com/nexus/content/repositories/releases
-SNAPSHOT_REPOSITORY_URL=http://www.cywl.com/nexus/content/repositories/snapshots
+RELEASE_REPOSITORY_URL=http://nexus.lingqugame.net/nexus/content/repositories/releases
+SNAPSHOT_REPOSITORY_URL=http://nexus.lingqugame.net/nexus/content/repositories/snapshots
