--- a/build.gradle
+++ b/build.gradle
@@ -90,9 +90,9 @@ subprojects {
     repositories {
         mavenLocal()        //使用本地仓库
         mavenCentral()
-//        maven {
-//            url "http://nexus.coolfunny.net/nexus/content/groups/public"
-//        }
+        maven {
+            url "http://nexus.coolfunny.net/nexus/content/groups/public"
+        }
     }
 
     dependencies {
