--- a/tny-game-common/build.gradle
+++ b/tny-game-common/build.gradle
@@ -6,7 +6,7 @@ dependencies {
 
     compile(
             libs.'mvel',
-            libs.'groovy-all',
+//            libs.'groovy-all',
             libs.'jackson-core',
             libs.'jackson-databind',
             libs.'jackson-annotations',
