--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'tny-game-protoex'
 include 'tny-game-net'
 include 'tny-game-base'
 include 'tny-game-actor'
+include 'tny-game-drama'
 include 'tny-game-asyndb'
 include 'tny-game-cache'
 include 'tny-game-cache-memcached'
