--- a/tny-game-web/build.gradle
+++ b/tny-game-web/build.gradle
@@ -14,6 +14,7 @@ dependencies {
             libs.'guava',
 
             project(":tny-game-protoex"),
+            project(":tny-game-common"),
             project(":tny-game-base"),
     )
 
