--- a/tny-game-net/build.gradle
+++ b/tny-game-net/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 
             project(":tny-game-common"),
             project(":tny-game-protoex"),
+            project(":tny-game-actor"),
     )
 
 }
