--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include 'tny-game-web'
 include 'tny-game-access'
 include 'tny-game-zookeeper'
 include 'tny-game-suite'
+include 'tny-game-oplog-log4j2kafka'
