--- a/tny-game-suite/build.gradle
+++ b/tny-game-suite/build.gradle
@@ -20,6 +20,7 @@ dependencies {
             project(":tny-game-oplog"),
             project(":tny-game-scanning"),
             project(":tny-game-cache-mysql"),
+            project(":tny-game-oplog-log4j2kafka"),
     )
 
 }
