--- a/tny-game-common/build.gradle
+++ b/tny-game-common/build.gradle
@@ -14,6 +14,7 @@ dependencies {
             libs.'commons-lang3',
             libs.'commons-io',
             libs.'commons-codec',
+            libs.'commons-collections4',
             libs.'joda-time',
 
             libs.'quartz-scheduler',
