--- a/tny-game-suite/build.gradle
+++ b/tny-game-suite/build.gradle
@@ -21,6 +21,7 @@ dependencies {
             project(":tny-game-scanning"),
             project(":tny-game-zookeeper"),
             project(":tny-game-cache-mysql"),
+            project(":tny-game-cache-redis"),
             project(":tny-game-oplog-log4j2kafka"),
     )
 
