--- a/tny-game-suite/build.gradle
+++ b/tny-game-suite/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "maven"
 dependencies {
 
     testCompile 'com.h2database:h2:1.4.182'
+    provided 'javax.servlet:javax.servlet-api:3.0.1'
 
     compile(
             libs.'jade',
