--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ allprojects {
     group "com.tny.game"
     apply plugin: "idea"
 
-    ext.pj_version = "2.0.x-SNAPSHOT"
+    ext.pj_version = "2.0.2.4-RELEASE"
     version = pj_version
 
     ext {
