--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include 'tny-game-web'
 include 'tny-game-access'
 include 'tny-game-zookeeper'
 include 'tny-game-suite'
+include 'tny-game-oplog-log4j'
 include 'tny-game-oplog-log4j2kafka'
 include 'tny-game-net-kafka'
 
