Fixed : RSAUtils.java 参数错误 Bug Add : Oplog-log4j

--- a/build.gradle
+++ b/build.gradle
@@ -109,10 +109,7 @@ subprojects {
                 libs.'spring-test',
         )
 
-        compile(
-                libs.'slf4j-api',
-                libs.'log4j-over-slf4j',
-        )
+        compile libs.'slf4j-api'
 
     }
 
