--- a/tny-game-oplog-log4j/build.gradle
+++ b/tny-game-oplog-log4j/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile(
             libs.'log4j-api',
             libs.'log4j-core',
+            project(":tny-game-oplog"),
     )
 
 }
