--- a/tny-game-net/build.gradle
+++ b/tny-game-net/build.gradle
@@ -5,8 +5,9 @@ apply plugin: "maven"
 dependencies {
 
     compile(
-            'io.netty:netty-all:5.0.0.Alpha2',
-            libs.'spring-context-support',
+//            'io.netty:netty-all:5.0.0.Alpha2',
+            'io.netty:netty-all:4.1.6.Final',
+//            libs.'spring-context-support',
 
             project(":tny-game-common"),
             project(":tny-game-protoex"),
