--- a/tny-game-suite/src/test/resources/suite.properties
+++ b/tny-game-suite/src/test/resources/suite.properties
@@ -4,7 +4,7 @@ tny.config.import=["version.properties"]
 tny.server.suite.launcher.profiles=suite.server,suite.game_auth
 
 #ServerType Class
-tny.server.suite.server.server_type_class=com.tny.game.suite.TestServerType
+tny.server.suite.server.server_type_class=com.tny.game.suite.TestAppType
 #ScopeType Class
 tny.server.suite.server.scope_type_class=com.tny.game.suite.TestScopeType
 
