--- a/tny-game-protoex/build.gradle
+++ b/tny-game-protoex/build.gradle
@@ -4,7 +4,7 @@ apply plugin: "maven"
 
 dependencies {
 
-    testCompile 'com.google.protobuf:protobuf-java:2.6.1'
+    testCompile libs.'protobuf-java'
 
     compile(
             libs.'commons-lang3',
