Change : GameExplorer.java

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,37 @@
 .gradle
 *client_code
 /build
+tny-game-access/
+tny-game-actor/src/main/resources/
+tny-game-actor/src/test/java/com/
+tny-game-actor/src/test/java/sg/game/basis/
+tny-game-actor/src/test/java/sg/game/world/
+tny-game-asyndb/src/main/resources/
+tny-game-asyndb/src/test/resources/
+tny-game-base/src/main/resources/
+tny-game-cache-memcached/src/main/resources/
+tny-game-cache-redis/src/main/resources/
+tny-game-cache-test/src/test/java/
+tny-game-cache/src/main/resources/
+tny-game-cache/src/test/java/
+tny-game-common/src/main/resources/
+tny-game-doc/src/main/resources/
+tny-game-doc/src/test/
+tny-game-net/src/main/java/com/tny/game/net/message/
+tny-game-net/src/test/java/net/
+tny-game-oplog-log4j/src/main/resources/
+tny-game-oplog-log4j/src/test/
+tny-game-oplog-log4j2kafka/src/main/resources/
+tny-game-oplog-log4j2kafka/src/test/
+tny-game-oplog/src/main/resources/
+tny-game-oplog/src/test/groovy/
+tny-game-oplog/src/test/java/
+tny-game-protobuf/
+tny-game-protoex/src/main/resources/
+tny-game-protoex/src/test/resources/
+tny-game-scanning/src/main/resources/
+tny-game-scanning/src/test/java/
+tny-game-web/src/main/resources/
+tny-game-web/src/test/java/
+tny-game-zookeeper/src/main/resources/
+tny-game-zookeeper/src/test/resources/
