--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ allprojects {
     group "com.tny.game"
     apply plugin: "idea"
 
-    ext.pj_version = "2.1.3-SNAPSHOT"
+    ext.pj_version = "2.1.3-RELEASE"
     version = pj_version
 
     ext {
@@ -105,7 +105,6 @@ subprojects {
         testCompile(
                 "junit:junit:${vers.junit}",
                 "org.jmock:jmock-junit4:${vers.jmock}",
-                "net.sourceforge.groboutils:groboutils-core:5",
                 libs.'spring-test',
         )
 
