--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ allprojects {
     group "com.tny.game"
     apply plugin: "idea"
 
-    ext.pj_version = "3.1.x-SNAPSHOT"
-//    ext.pj_version = "3.1.x-RELEASE"
+//    ext.pj_version = "3.1.x-SNAPSHOT"
+    ext.pj_version = "3.1.0-RELEASE"
     version = pj_version
 
     ext {
