Change : 增加物品统计日志 Change : 修改依赖仓库

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-RELEASE_REPOSITORY_URL=http://nexus.lingqugame.net/nexus/content/repositories/releases
-SNAPSHOT_REPOSITORY_URL=http://nexus.lingqugame.net/nexus/content/repositories/snapshots
+RELEASE_REPOSITORY_URL=http://maven.lingqugame.net/repository/maven-releases
+SNAPSHOT_REPOSITORY_URL=http://maven.lingqugame.net/repository/maven-snapshots
