--- a/build.gradle
+++ b/build.gradle
@@ -97,10 +97,7 @@ subprojects {
     repositories {
         mavenLocal()        //使用本地仓库
         maven {
-            url "http://nexus.lingqugame.net/nexus/content/groups/public"
-        }
-        maven {
-            url "http://maven.aliyun.com/nexus/content/groups/public"
+            url "http://maven.lingqugame.net/repository/maven-public/"
         }
         mavenCentral()
     }
