Change : NetLogger.java 分类 Change : NettyClientTunnel.java 登录失败 断线重连

--- a/tny-game-web/build.gradle
+++ b/tny-game-web/build.gradle
@@ -20,9 +20,9 @@ dependencies {
             project(":tny-game-common"),
             project(":tny-game-base"),
     )
-
-    compile(libs.'shiro') {
-        exclude module: 'guava'
-    }
+//
+//    compile(libs.'shiro') {
+//        exclude module: 'guava'
+//    }
 
 }
