Change : 调整suite与net关系

--- a/tny-game-net/build.gradle
+++ b/tny-game-net/build.gradle
@@ -11,7 +11,8 @@ dependencies {
 
             project(":tny-game-common"),
             project(":tny-game-protoex"),
-            project(":tny-game-actor")
     )
+
+    testCompile libs.'spring-context-support'
 
 }
