--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 rootProject.name = 'tny-framework'
 include 'tny-game-common'
-include 'tny-game-common-mvel'
+include 'tny-game-expr'
+include 'tny-game-expr-mvel'
+include 'tny-game-expr-jsr223'
+include 'tny-game-expr-groovy'
 include 'tny-game-protoex'
 include 'tny-game-net'
 include 'tny-game-base'
@@ -21,5 +24,5 @@ include 'tny-game-suite'
 include 'tny-game-protobuf'
 include 'tny-game-oplog-log4j'
 include 'tny-game-oplog-log4j2kafka'
-//include 'tny-game-net-kafka'
+include 'tny-game-net-kafka'
 
