--- a/tny-game-expr-mvel/build.gradle
+++ b/tny-game-expr-mvel/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "maven"
 dependencies {
 
     compile(
+            project(":tny-game-expr"),
             project(":tny-game-common"),
             libs.'mvel',
     )
