--- a/tny-game-net/build.gradle
+++ b/tny-game-net/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 //            'io.netty:netty-all:5.0.0.Alpha2',
             'io.netty:netty-all:4.1.15.Final',
 //            libs.'spring-context-support',
-            project(":tny-game-expr-mvel"),
+            project(":tny-game-expr-groovy"),
             project(":tny-game-protoex"),
     )
 
