--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'tny-game-expr'
 include 'tny-game-expr-mvel'
 include 'tny-game-expr-jsr223'
 include 'tny-game-expr-groovy'
+include 'tny-game-expr-luaj'
 include 'tny-game-protoex'
 include 'tny-game-net'
 include 'tny-game-base'
