Change : 优化StaticeIniter调用, 调整在包扫描后

--- a/tny-game-web/build.gradle
+++ b/tny-game-web/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 
     api project(":tny-game-protoex")
     api project(":tny-game-common")
-    api project(":tny-game-base")
+//    api project(":tny-game-base")
 //    compile(libs.'shiro') {
 //        exclude module: 'guava'
 //    }
