--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ buildscript {
     }
 
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.5.RELEASE")
+//        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.5.RELEASE")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.2.5.RELEASE"
     }
 }
 
