refactor(tny-game-common): 重构tny-game-common
拆分 tny-game-common

--- a/tny-game-base/src/main/resources/META-INF/tny-factory.properties
+++ b/tny-game-base/src/main/resources/META-INF/tny-factory.properties
@@ -1,4 +1,4 @@
-com.tny.game.loader.com.tny.game.common.EnumLoader=\
+com.tny.game.loader.common.EnumLoader=\
 com.tny.game.base.item.Ability,\
 com.tny.game.base.item.ItemType,\
 com.tny.game.base.item.behavior.Action,\
@@ -8,6 +8,5 @@ com.tny.game.base.item.behavior.DemandParam,\
 com.tny.game.base.item.Module,\
 com.tny.game.base.item.Feature,\
 com.tny.game.base.item.OpenMode
-
 com.tny.game.scanner.annotation.ClassSelectorProvider=\
 com.tny.game.base.item.probability.RandomCreatorLoader
