--- a/tny-game-common-lang/src/main/resources/META-INF/tny-factory.properties
+++ b/tny-game-common-lang/src/main/resources/META-INF/tny-factory.properties
@@ -1,2 +1,2 @@
-com.tny.game.loader.com.tny.game.common.EnumLoader=\
-com.tny.game.com.tny.game.common.result.ResultCode
+com.tny.game.loader.common.EnumLoader=\
+com.tny.game.common.result.ResultCode
