--- a/dependency.gradle
+++ b/dependency.gradle
@@ -4,15 +4,15 @@ ext.vers = [
         junit       : "4.12",
         mockito     : "1.10.19",
 
-        spring      : "5.2.4.RELEASE",
+        spring      : "5.2.9.RELEASE",
         slf4j       : '1.7.30',
-        log4j       : '2.13.0',
-        jackson     : "2.10.3",
+        log4j       : '2.13.3',
+        jackson     : "2.11.2",
         jade        : "1.6.x-SNAPSHOT",
         poi         : "4.1.0",
 
-        spring_boot : "2.2.5.RELEASE",
-        spring_cloud: "Hoxton.SR3",
+        spring_boot : "2.3.4.RELEASE",
+        spring_cloud: "Hoxton.SR8",
 
 //        spring_boot : "2.2.2.RELEASE",
 //        spring_cloud: "Hoxton.SR1",
@@ -31,7 +31,7 @@ ext.libs = [
         disruptor                          : "com.lmax:disruptor:3.2.0",
 
 
-        netty                              : "io.netty:netty-all:4.1.36.Final",
+        netty                              : "io.netty:netty-all:4.1.52.Final",
         cglib_nodep                        : "cglib:cglib-nodep:3.2.12",
         javassist                          : 'org.javassist:javassist:3.26.0-GA',
         mvel                               : "org.mvel:mvel2:2.4.5.Final",
@@ -44,15 +44,15 @@ ext.libs = [
         jackson_dataformat_yaml            : "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${vers.jackson}",
         jackson_dataformat_xml             : "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${vers.jackson}",
 
-        httpclient                         : "org.apache.httpcomponents:httpclient:4.5.11",
+        httpclient                         : "org.apache.httpcomponents:httpclient:4.5.12",
 
-        commons_lang3                      : "org.apache.commons:commons-lang3:3.9",
-        commons_codec                      : "commons-codec:commons-codec:1.12",
-        commons_io                         : "commons-io:commons-io:2.6",
-        commons_beanutils                  : "commons-beanutils:commons-beanutils:1.9.3",
-        commons_daemon                     : "commons-daemon:commons-daemon:1.1.0",
-        commons_collections4               : "org.apache.commons:commons-collections4:4.3",
-        commons_pool2                      : "org.apache.commons:commons-pool2:2.8.0",
+        commons_codec                      : 'commons-codec:commons-codec:1.14',
+        commons_io                         : 'commons-io:commons-io:2.8.0',
+        commons_beanutils                  : 'commons-beanutils:commons-beanutils:1.9.4',
+        commons_daemon                     : 'commons-daemon:commons-daemon:1.1.0',
+        commons_lang3                      : 'org.apache.commons:commons-lang3:3.11',
+        commons_collections4               : 'org.apache.commons:commons-collections4:4.4',
+        commons_pool2                      : 'org.apache.commons:commons-pool2:2.8.1',
         commons_jexl                       : "org.apache.commons:commons-jexl:2.1.1",
         commons_pool                       : "commons-pool:commons-pool:1.6",
         commons_dbcp2                      : "org.apache.commons:commons-dbcp2:2.6.0",
@@ -63,7 +63,7 @@ ext.libs = [
 
         xstream                            : "com.thoughtworks.xstream:xstream:1.4.11.1",
 
-        guava                              : "com.google.guava:guava:28.2-jre",
+        guava                              : "com.google.guava:guava:29.0-jre",
         joda_time                          : "joda-time:joda-time:2.10.5",
 
         spring_test                        : "org.springframework:spring-test:${vers.spring}",
