--- a/tny-game-net-demo/src/main/resources/application-server.yml
+++ b/tny-game-net-demo/src/main/resources/application-server.yml
@@ -21,7 +21,8 @@ tny:
             - opqrstuvwxyz
     command-task-processor:
       default:
-        threads: 10
+        waitStrategy: YIELDING
+        threads: 4
     session:
       user:
         offline-close-delay: 1000
