--- a/tny-game-net-demo/src/main/resources/application-server.yml
+++ b/tny-game-net-demo/src/main/resources/application-server.yml
@@ -21,7 +21,7 @@ tny:
             - opqrstuvwxyz
     command-task-processor:
       default:
-        waitStrategy: YIELDING
+        waitStrategy: BLOCKING
         threads: 4
     session:
       user:
