--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ include 'tny-game-common-collection'
 include 'tny-game-common-json'
 include 'tny-game-common-scheduler'
 include 'tny-game-common-boot'
+include 'tny-game-common-boot-log4j2'
 include 'tny-game-tester'
 include 'tny-game-expr'
 include 'tny-game-expr-mvel'
