--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,12 @@
 RELEASE_REPOSITORY_URL=http://m2.tnydev.com/repository/maven-releases/
 SNAPSHOT_REPOSITORY_URL=http://m2.tnydev.com/repository/maven-snapshots/
-
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.caching=true
 #org.gradle.configureondemand=true
 #org.gradle.unsafe.configuration-cache=true
 org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:MaxPermSize=512m -XX:+UseG1GC -XX:MaxMetaspaceSize=1024m -XX:InitiatingHeapOccupancyPercent=60 -XX:ReservedCodeCacheSize=240m -XX:+UseCompressedOops -Dfile.encoding=UTF-8 -XX:SoftRefLRUPolicyMSPerMB=50
+systemProp.org.gradle.internal.publish.checksums.insecure=true
 
-gradleVersion=5.4
 javaVersion=8
 encoding=UTF-8
