--- a/gradle/publications.gradle
+++ b/gradle/publications.gradle
@@ -1,4 +1,6 @@
 apply plugin: "maven-publish"
+apply plugin: "io.spring.dependency-management"
+
 
 apply from: "$rootDir/gradle/dependency.gradle"
 
