--- a/tny-game-net-demo/src/main/resources/application-relay-gateway-server.yml
+++ b/tny-game-net-demo/src/main/resources/application-relay-gateway-server.yml
@@ -1,5 +1,6 @@
 tny:
   app:
+    server-id: 1
     name: GatewayApp
     app-type: gateway
     scope-type: online
@@ -37,6 +38,7 @@ tny:
       cluster:
         serve-clusters:
           - id: "GameServer"
+            link-connection-size: 10
             instances:
               - id: 1
                 url: tcp://127.0.0.1:15800
