--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,21 @@ SNAPSHOT_REPOSITORY_URL=http://m2.tnydev.com/repository/maven-snapshots/
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.caching=true
-
 org.gradle.workers.max=4
-
 #org.gradle.configureondemand=true
 #org.gradle.unsafe.configuration-cache=true
 org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:MaxPermSize=512m -XX:+UseG1GC -XX:MaxMetaspaceSize=1024m -XX:InitiatingHeapOccupancyPercent=60 -XX:ReservedCodeCacheSize=240m -XX:+UseCompressedOops -Dfile.encoding=UTF-8 -XX:SoftRefLRUPolicyMSPerMB=50
 systemProp.org.gradle.internal.publish.checksums.insecure=true
-
 javaVersion=8
 encoding=UTF-8
-
+#
+#
+#
+#===================================
+#   Dependencies Versions
+#===================================
+jacksonVersion=2.11.4
+springCloudVersion=2020.0.3
+springBootVersion=2.4.4
+alibabaCloudVersion=2021.1
+log4j2Version=2.14.1
