--- a/tny-game-starter-net-netty4/build.gradle
+++ b/tny-game-starter-net-netty4/build.gradle
@@ -10,9 +10,11 @@ dependencies {
     api project(":tny-game-net-netty4")
 
     api libs.spring_boot_autoconfigure
+    api libs.spring_cloud_starter_bootstrap
 
-    implementation project(":tny-game-net-netty4-codec-protoex")
-    implementation project(":tny-game-net-netty4-codec-jprotobuf")
-    implementation project(":tny-game-starter-codec")
+    api project(":tny-game-starter-codec")
+    api project(":tny-game-net-netty4-codec-protoex")
+    compileOnly project(":tny-game-net-netty4-codec-jprotobuf")
+    compileOnly libs.alibaba_cloud_starter_nacos_discovery
 
 }
