--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -11,7 +11,6 @@ ext.vers = [
         slf4j                               : "1.7.30",
         log4j2                              : "2.14.1",
 
-        jackson                             : "2.12.3",
         swagger_v3                          : "2.1.4",
         springfox                           : "2.9.2",
         springdoc                           : "1.4.6",
@@ -19,14 +18,10 @@ ext.vers = [
         okhttp3                             : "4.9.1",
 
         spring_batch                        : "4.3.2",
-        spring_cloud                        : "2020.0.2",
         spring_retry                        : "1.3.1",
         spring_security                     : "5.4.6",
-        spring_boot                         : "2.5.2",
         spring_security_oauth2_autoconfigure: "2.5.2",
         spring_boot_admin                   : "2.3.1",
-
-        alibaba_cloud                       : "2021.1",
 
         httpclient                          : "4.5.12",
         redisson                            : "3.16.0",
@@ -53,6 +48,7 @@ ext.libs = [
 
         log4j_api                                : "org.apache.logging.log4j:log4j-api:${vers.log4j2}",
         log4j_core                               : "org.apache.logging.log4j:log4j-core:${vers.log4j2}",
+        log4j_jul                                : "org.apache.logging.log4j:log4j-jul:${vers.log4j2}",
         log4j_slf4j_impl                         : "org.apache.logging.log4j:log4j-slf4j-impl:${vers.log4j2}",
         log4j_web                                : "org.apache.logging.log4j:log4j-web",
 
@@ -63,11 +59,11 @@ ext.libs = [
 
         disruptor                                : "com.lmax:disruptor:3.4.4",
 
-        cglib_nodep                              : "cglib:cglib-nodep:3.2.0",
+        cglib_nodep                              : "cglib:cglib-nodep:3.2.12",
 
         json_smart                               : "net.minidev:json-smart:2.3",
         lang_tag                                 : "com.nimbusds:lang-tag:1.4.4",
-        jackson_bom                              : "com.fasterxml.jackson:jackson-bom:${vers.jackson}",
+//        jackson_bom                              : "com.fasterxml.jackson:jackson-bom:${vers.jackson}",
         jackson_core                             : "com.fasterxml.jackson.core:jackson-core",
         jackson_databind                         : "com.fasterxml.jackson.core:jackson-databind",
         jackson_annotations                      : "com.fasterxml.jackson.core:jackson-annotations",
@@ -155,12 +151,12 @@ ext.libs = [
         spring_aspects                           : "org.springframework:spring-aspects",
         spring_orm                               : "org.springframework:spring-orm",
 
-        spring_boot_gradle_plugin                : "org.springframework.boot:spring-boot-gradle-plugin:$vers.spring_boot",
-        spring_boot_dependencies                 : "org.springframework.boot:spring-boot-dependencies:$vers.spring_boot",
+//        spring_boot_gradle_plugin                : "org.springframework.boot:spring-boot-gradle-plugin:$vers.spring_boot",
+//        spring_boot_dependencies                 : "org.springframework.boot:spring-boot-dependencies:$vers.spring_boot",
 
         spring_security_oauth2_boot_autoconfigure: "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:$vers.spring_security_oauth2_autoconfigure",
         spring_boot                              : "org.springframework.boot:spring-boot",
-        spring_boot_autoconfigure                : "org.springframework.boot:spring-boot-autoconfigure:$vers.spring_boot",
+        spring_boot_autoconfigure                : "org.springframework.boot:spring-boot-autoconfigure",
         spring_boot_configuration_processor      : "org.springframework.boot:spring-boot-configuration-processor",
         spring_boot_starter                      : "org.springframework.boot:spring-boot-starter",
         spring_boot_starter_test                 : "org.springframework.boot:spring-boot-starter-test",
@@ -194,7 +190,7 @@ ext.libs = [
         spring_security_oauth2_resource_server   : "org.springframework.security:spring-security-oauth2-resource-server",
 
 
-        spring_cloud_dependencies                : "org.springframework.cloud:spring-cloud-dependencies:$vers.spring_cloud",
+//        spring_cloud_dependencies                : "org.springframework.cloud:spring-cloud-dependencies:$vers.spring_cloud",
         spring_cloud_commons                     : "org.springframework.cloud:spring-cloud-commons",
         spring_cloud_config_server               : "org.springframework.cloud:spring-cloud-config-server",
         spring_cloud_starter_security            : "org.springframework.cloud:spring-cloud-starter-security",
@@ -213,7 +209,7 @@ ext.libs = [
         spring_boot_admin_starter_server         : "de.codecentric:spring-boot-admin-starter-server",
 
         alibaba_nacos_client                     : "com.alibaba.nacos:nacos-client:2.0.0",
-        alibaba_cloud_dependencies               : "com.alibaba.cloud:spring-cloud-alibaba-dependencies:$vers.alibaba_cloud",
+//        alibaba_cloud_dependencies               : "com.alibaba.cloud:spring-cloud-alibaba-dependencies:$vers.alibaba_cloud",
         alibaba_cloud_stream_binder_rocketmq     : "com.alibaba.cloud:spring-cloud-stream-binder-rocketmq",
 
         alibaba_cloud_starter_bus_rocketmq       : "com.alibaba.cloud:spring-cloud-starter-bus-rocketmq",
