--- a/tny-game-data/src/main/resources/META-INF/tny-factory.properties
+++ b/tny-game-data/src/main/resources/META-INF/tny-factory.properties
@@ -1,2 +1,2 @@
 com.tny.game.scanner.annotation.ClassSelectorProvider=\
-  com.tny.game.data.DataClassLoader
+  com.tny.game.data.EntitySchemeLoader
