--- a/tny-game-net-demo/build.gradle
+++ b/tny-game-net-demo/build.gradle
@@ -18,9 +18,7 @@ dependencies {
     implementation libs.disruptor
 
     implementation libs.jprotobuf
-    implementation libs.spring_boot_autoconfigure
     implementation libs.spring_boot_starter_log4j2
-    implementation libs.spring_boot_starter_data_mongodb
 
     implementation project(":tny-game-loader")
     implementation project(":tny-game-doc")
@@ -29,7 +27,7 @@ dependencies {
     implementation project(":tny-game-starter-redisson")
     implementation project(":tny-game-data-redisson")
 
-//    implementation project(":tny-game-starter-mongodb")
+    implementation project(":tny-game-starter-mongodb")
     implementation project(":tny-game-data-mongodb")
 
     implementation project(":tny-game-starter-data")
